parser.output
Terminals unused in grammar

    COMMA


Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list EOL function
    4              | ε

    5 function: FUNCTION ID EOL function_body END

    6 $@1: ε

    7 function_body: $@1 statement_list

    8 statement_list: statement EOL
    9               | statement SEMICOLON
   10               | statement_list statement EOL
   11               | statement_list statement SEMICOLON
   12               | function EOL
   13               | function SEMICOLON
   14               | statement_list function EOL
   15               | statement_list function SEMICOLON

   16 statement: assignment
   17          | control
   18          | expression
   19          | PRINT expression

   20 assignment: ID ASSIGN expression
   21           | TYPE ID ASSIGN expression
   22           | array_assignment

   23 array_assignment: ID LQPAREN expression RQPAREN ASSIGN expression

   24 expression: number
   25           | cell
   26           | logical_expr
   27           | function_call_expr
   28           | ID LQPAREN expression RQPAREN
   29           | ID LQPAREN RQPAREN
   30           | ID
   31           | LENGTH expression
   32           | expression MOD expression
   33           | expression PLUS expression
   34           | expression MINUS expression
   35           | MINUS expression
   36           | expression IN expression
   37           | expression ALL IN expression
   38           | expression SOME IN expression
   39           | expression LESS expression
   40           | expression ALL LESS expression
   41           | expression SOME LESS expression
   42           | LPAREN expression RPAREN
   43           | robot_command_expr

   44 function_call_expr: DO ID
   45                   | DO FUNCTION function_body END

   46 number: INT

   47 cell: CELL

   48 logical_expr: BOOL
   49             | expression UNEQUAL expression
   50             | expression EQUAL expression
   51             | expression AND expression
   52             | expression OR expression
   53             | NOT expression

   54 control: IF expression function_call_expr ELSE function_call_expr
   55        | IF expression function_call_expr
   56        | FROM expression TO expression opt_step function_call_expr

   57 opt_step: ε
   58         | WITH STEP expression

   59 robot_command_expr: GO DIRECTION
   60                   | PICK DIRECTION
   61                   | DROP DIRECTION
   62                   | LOOK DIRECTION
   63                   | SET expression
   64                   | GET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <iVal> (258) 46
    BOOL <iVal> (259) 48
    CELL <cellVal> (260) 47
    DIRECTION <dir> (261) 59 60 61 62
    ID <sVal> (262) 5 20 21 23 28 29 30 44
    TYPE <typeVal> (263) 21
    UMINUS (264)
    LENGTH (265) 31
    IF (266) 54 55
    ELSE (267) 54
    FROM (268) 56
    TO (269) 56
    WITH (270) 58
    STEP (271) 58
    DO (272) 44 45
    FUNCTION (273) 5 45
    END (274) 5 45
    GO (275) 59
    PICK (276) 60
    DROP (277) 61
    LOOK (278) 62
    SET (279) 63
    GET (280) 64
    IN (281) 36 37 38
    ALL (282) 37 40
    SOME (283) 38 41
    LESS (284) 39 40 41
    ASSIGN (285) 20 21 23
    PLUS (286) 33
    MINUS (287) 34 35
    AND (288) 51
    OR (289) 52
    NOT (290) 53
    EQUAL (291) 50
    LPAREN (292) 42
    RPAREN (293) 42
    LQPAREN (294) 23 28 29
    RQPAREN (295) 23 28 29
    COMMA (296)
    SEMICOLON (297) 9 11 13 15
    EOL (298) 3 5 8 10 12 14
    PRINT (299) 19
    MOD (300) 32
    UNEQUAL (301) 49


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program (48)
        on left: 1
        on right: 0
    function_list (49)
        on left: 2 3 4
        on right: 1 3
    function (50)
        on left: 5
        on right: 2 3 12 13 14 15
    function_body <stmtList> (51)
        on left: 7
        on right: 5 45
    $@1 (52)
        on left: 6
        on right: 7
    statement_list <stmtList> (53)
        on left: 8 9 10 11 12 13 14 15
        on right: 7 10 11 14 15
    statement <stmt> (54)
        on left: 16 17 18 19
        on right: 8 9 10 11
    assignment <stmt> (55)
        on left: 20 21 22
        on right: 16
    array_assignment <stmt> (56)
        on left: 23
        on right: 22
    expression <expr> (57)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 18 19 20 21 23 28 31 32 33 34 35 36 37 38 39 40 41 42 49 50 51 52 53 54 55 56 58 63
    function_call_expr <expr> (58)
        on left: 44 45
        on right: 27 54 55 56
    number <expr> (59)
        on left: 46
        on right: 24
    cell <expr> (60)
        on left: 47
        on right: 25
    logical_expr <expr> (61)
        on left: 48 49 50 51 52 53
        on right: 26
    control <stmt> (62)
        on left: 54 55 56
        on right: 17
    opt_step <expr> (63)
        on left: 57 58
        on right: 56
    robot_command_expr <expr> (64)
        on left: 59 60 61 62 63 64
        on right: 43


State 0

    0 $accept: • program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 4 (function_list)

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: FUNCTION • ID EOL function_body END

    ID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: function_list •
    3 function_list: function_list • EOL function

    EOL  shift, and go to state 7

    $default  reduce using rule 1 (program)


State 4

    2 function_list: function •

    $default  reduce using rule 2 (function_list)


State 5

    5 function: FUNCTION ID • EOL function_body END

    EOL  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 function_list: function_list EOL • function

    FUNCTION  shift, and go to state 1

    function  go to state 9


State 8

    5 function: FUNCTION ID EOL • function_body END

    $default  reduce using rule 6 ($@1)

    function_body  go to state 10
    $@1            go to state 11


State 9

    3 function_list: function_list EOL function •

    $default  reduce using rule 3 (function_list)


State 10

    5 function: FUNCTION ID EOL function_body • END

    END  shift, and go to state 12


State 11

    7 function_body: $@1 • statement_list

    INT       shift, and go to state 13
    BOOL      shift, and go to state 14
    CELL      shift, and go to state 15
    ID        shift, and go to state 16
    TYPE      shift, and go to state 17
    LENGTH    shift, and go to state 18
    IF        shift, and go to state 19
    FROM      shift, and go to state 20
    DO        shift, and go to state 21
    FUNCTION  shift, and go to state 1
    GO        shift, and go to state 22
    PICK      shift, and go to state 23
    DROP      shift, and go to state 24
    LOOK      shift, and go to state 25
    SET       shift, and go to state 26
    GET       shift, and go to state 27
    MINUS     shift, and go to state 28
    NOT       shift, and go to state 29
    LPAREN    shift, and go to state 30
    PRINT     shift, and go to state 31

    function            go to state 32
    statement_list      go to state 33
    statement           go to state 34
    assignment          go to state 35
    array_assignment    go to state 36
    expression          go to state 37
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    control             go to state 42
    robot_command_expr  go to state 43


State 12

    5 function: FUNCTION ID EOL function_body END •

    $default  reduce using rule 5 (function)


State 13

   46 number: INT •

    $default  reduce using rule 46 (number)


State 14

   48 logical_expr: BOOL •

    $default  reduce using rule 48 (logical_expr)


State 15

   47 cell: CELL •

    $default  reduce using rule 47 (cell)


State 16

   20 assignment: ID • ASSIGN expression
   23 array_assignment: ID • LQPAREN expression RQPAREN ASSIGN expression
   28 expression: ID • LQPAREN expression RQPAREN
   29           | ID • LQPAREN RQPAREN
   30           | ID •

    ASSIGN   shift, and go to state 44
    LQPAREN  shift, and go to state 45

    $default  reduce using rule 30 (expression)


State 17

   21 assignment: TYPE • ID ASSIGN expression

    ID  shift, and go to state 46


State 18

   31 expression: LENGTH • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 48
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 19

   54 control: IF • expression function_call_expr ELSE function_call_expr
   55        | IF • expression function_call_expr

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 49
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 20

   56 control: FROM • expression TO expression opt_step function_call_expr

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 50
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 21

   44 function_call_expr: DO • ID
   45                   | DO • FUNCTION function_body END

    ID        shift, and go to state 51
    FUNCTION  shift, and go to state 52


State 22

   59 robot_command_expr: GO • DIRECTION

    DIRECTION  shift, and go to state 53


State 23

   60 robot_command_expr: PICK • DIRECTION

    DIRECTION  shift, and go to state 54


State 24

   61 robot_command_expr: DROP • DIRECTION

    DIRECTION  shift, and go to state 55


State 25

   62 robot_command_expr: LOOK • DIRECTION

    DIRECTION  shift, and go to state 56


State 26

   63 robot_command_expr: SET • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 57
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 27

   64 robot_command_expr: GET •

    $default  reduce using rule 64 (robot_command_expr)


State 28

   35 expression: MINUS • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 58
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 29

   53 logical_expr: NOT • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 59
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 30

   42 expression: LPAREN • expression RPAREN

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 60
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 31

   19 statement: PRINT • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 61
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 32

   12 statement_list: function • EOL
   13               | function • SEMICOLON

    SEMICOLON  shift, and go to state 62
    EOL        shift, and go to state 63


State 33

    7 function_body: $@1 statement_list •
   10 statement_list: statement_list • statement EOL
   11               | statement_list • statement SEMICOLON
   14               | statement_list • function EOL
   15               | statement_list • function SEMICOLON

    INT       shift, and go to state 13
    BOOL      shift, and go to state 14
    CELL      shift, and go to state 15
    ID        shift, and go to state 16
    TYPE      shift, and go to state 17
    LENGTH    shift, and go to state 18
    IF        shift, and go to state 19
    FROM      shift, and go to state 20
    DO        shift, and go to state 21
    FUNCTION  shift, and go to state 1
    GO        shift, and go to state 22
    PICK      shift, and go to state 23
    DROP      shift, and go to state 24
    LOOK      shift, and go to state 25
    SET       shift, and go to state 26
    GET       shift, and go to state 27
    MINUS     shift, and go to state 28
    NOT       shift, and go to state 29
    LPAREN    shift, and go to state 30
    PRINT     shift, and go to state 31

    $default  reduce using rule 7 (function_body)

    function            go to state 64
    statement           go to state 65
    assignment          go to state 35
    array_assignment    go to state 36
    expression          go to state 37
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    control             go to state 42
    robot_command_expr  go to state 43


State 34

    8 statement_list: statement • EOL
    9               | statement • SEMICOLON

    SEMICOLON  shift, and go to state 66
    EOL        shift, and go to state 67


State 35

   16 statement: assignment •

    $default  reduce using rule 16 (statement)


State 36

   22 assignment: array_assignment •

    $default  reduce using rule 22 (assignment)


State 37

   18 statement: expression •
   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression

    IN       shift, and go to state 68
    ALL      shift, and go to state 69
    SOME     shift, and go to state 70
    LESS     shift, and go to state 71
    PLUS     shift, and go to state 72
    MINUS    shift, and go to state 73
    AND      shift, and go to state 74
    OR       shift, and go to state 75
    EQUAL    shift, and go to state 76
    MOD      shift, and go to state 77
    UNEQUAL  shift, and go to state 78

    $default  reduce using rule 18 (statement)


State 38

   27 expression: function_call_expr •

    $default  reduce using rule 27 (expression)


State 39

   24 expression: number •

    $default  reduce using rule 24 (expression)


State 40

   25 expression: cell •

    $default  reduce using rule 25 (expression)


State 41

   26 expression: logical_expr •

    $default  reduce using rule 26 (expression)


State 42

   17 statement: control •

    $default  reduce using rule 17 (statement)


State 43

   43 expression: robot_command_expr •

    $default  reduce using rule 43 (expression)


State 44

   20 assignment: ID ASSIGN • expression

    INT     shift, and go to state 13
    BOOL    shift, and go to state 14
    CELL    shift, and go to state 15
    ID      shift, and go to state 47
    LENGTH  shift, and go to state 18
    DO      shift, and go to state 21
    GO      shift, and go to state 22
    PICK    shift, and go to state 23
    DROP    shift, and go to state 24
    LOOK    shift, and go to state 25
    SET     shift, and go to state 26
    GET     shift, and go to state 27
    MINUS   shift, and go to state 28
    NOT     shift, and go to state 29
    LPAREN  shift, and go to state 30

    expression          go to state 79
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 45

   23 array_assignment: ID LQPAREN • expression RQPAREN ASSIGN expression
   28 expression: ID LQPAREN • expression RQPAREN
   29           | ID LQPAREN • RQPAREN

    INT      shift, and go to state 13
    BOOL     shift, and go to state 14
    CELL     shift, and go to state 15
    ID       shift, and go to state 47
    LENGTH   shift, and go to state 18
    DO       shift, and go to state 21
    GO       shift, and go to state 22
    PICK     shift, and go to state 23
    DROP     shift, and go to state 24
    LOOK     shift, and go to state 25
    SET      shift, and go to state 26
    GET      shift, and go to state 27
    MINUS    shift, and go to state 28
    NOT      shift, and go to state 29
    LPAREN   shift, and go to state 30
    RQPAREN  shift, and go to state 80

    expression          go to state 81
    function_call_expr  go to state 38
    number              go to state 39
    cell                go to state 40
    logical_expr        go to state 41
    robot_command_expr  go to state 43


State 46

   21 assignment: TYPE ID • ASSIGN expression

    ASSIGN  shift, and go to state 82


State 47

   28 expression: ID • LQPAREN expression RQPAREN
   29           | ID • LQPAREN RQPAREN
   30           | ID •

    LQPAREN  shift, and go to state 83

    $default  reduce using rule 30 (expression)


State 48

   31 expression: LENGTH expression •
   32           | expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression

    $default  reduce using rule 31 (expression)


State 49

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression
   54 control: IF expression • function_call_expr ELSE function_call_expr
   55        | IF expression • function_call_expr

    DO       shift, and go to state 21
    IN       shift, and go to state 68
    ALL      shift, and go to state 69
    SOME     shift, and go to state 70
    LESS     shift, and go to state 71
    PLUS     shift, and go to state 72
    MINUS    shift, and go to state 73
    AND      shift, and go to state 74
    OR       shift, and go to state 75
    EQUAL    shift, and go to state 76
    MOD      shift, and go to state 77
    UNEQUAL  shift, and go to state 78

    function_call_expr  go to state 84


State 50

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression
   56 control: FROM expression • TO expression opt_step function_call_expr

    TO       shift, and go to state 85
    IN       shift, and go to state 68
    ALL      shift, and go to state 69
    SOME     shift, and go to state 70
    LESS     shift, and go to state 71
    PLUS     shift, and go to state 72
    MINUS    shift, and go to state 73
    AND      shift, and go to state 74
    OR       shift, and go to state 75
    EQUAL    shift, and go to state 76
    MOD      shift, and go to state 77
    UNEQUAL  shift, and go to state 78


State 51

   44 function_call_expr: DO ID •

    $default  reduce using rule 44 (function_call_expr)


State 52

   45 function_call_expr: DO FUNCTION • function_body END

    $default  reduce using rule 6 ($@1)

    function_body  go to state 86
    $@1            go to state 11


State 53

   59 robot_command_expr: GO DIRECTION •

    $default  reduce using rule 59 (robot_command_expr)


State 54

   60 robot_command_expr: PICK DIRECTION •

    $default  reduce using rule 60 (robot_command_expr)


State 55

   61 robot_command_expr: DROP DIRECTION •

    $default  reduce using rule 61 (robot_command_expr)


State 56

   62 robot_command_expr: LOOK DIRECTION •

    $default  reduce using rule 62 (robot_command_expr)


State 57

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression
   63 robot_command_expr: SET expression •

    $default  reduce using rule 63 (robot_command_expr)


State 58

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   35           | MINUS expression •
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression

    $default  reduce using rule 35 (expression)


State 59

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression
   53             | NOT expression •

    $default  reduce using rule 53 (logical_expr)


State 60

   32 expression: expression • MOD expression
   33           | expression • PLUS expression
   34           | expression • MINUS expression
   36           | expression • IN expression
   37           | expression • ALL IN expression
   38           | expression • SOME IN expression
   39           | expression • LESS expression
   40           | expression • ALL LESS expression
   41           | expression • SOME LESS expression
   42           | LPAREN expression • RPAREN
   49 logical_expr: expression • UNEQUAL expression
   50             | expression • EQUAL expression
   51             | expression • AND expression
   52             | expression • OR expression

    IN       shift, and go to state 68
    ALL      shift, and go to state 69
    SOME     shift, and go to state 70
    LESS     shift, and go to state 71
    PLUS     shift, and go to state 72
    MINUS    shift, and go to state 73
    AND      shift, and go to state 74
    OR       shift, and go to state 75
    EQUAL    shift, and go to state 76
    RPAREN   shift, and go to state 87
    MOD      shift, and go to state 77
    UNEQUAL  shift, and go to state 78


State 61
